# models/Req.go
@@ -1,0 +1,9 @@
+package Model
+
+type RegisterJson struct {
+	ID        string
+	Password1 string
+	Password2 string
+	Icon      []byte
+	UserName  string
+}
